...
        BottomNavigationItem(
            title = "Movies",
            selectedIcon = Icons.Filled.Movie,
            unselectedIcon = Icons.Outlined.Movie,
        ),
        BottomNavigationItem(
            title = "Favourites",
            selectedIcon = Icons.Filled.Favorite,
            unselectedIcon = Icons.Outlined.Favorite,
        )
    )
    val scrollBehavior = TopAppBarDefaults.enterAlwaysScrollBehavior()
    var selectedItemIndex by rememberSaveable {
...
                            )
                    )
                }

                if (listType == MOVIE_LIST_FAVOURITES && favouritesState.favourites.isEmpty()) {
                    Text(
                        text = "No Favourites",
                        style = MaterialTheme.typography.bodyMedium.copy(fontWeight = FontWeight.Normal),
                        modifier = Modifier
                            .padding(top = 8.dp)
                            .align(Alignment.Center)
                    )
                }
...
